--- a/configs/mpw7705_defconfig
+++ b/configs/mpw7705_defconfig
@@ -9,6 +9,7 @@ CONFIG_SPL_LIBGENERIC_SUPPORT=y
 CONFIG_SPL_SPI_FLASH_SUPPORT=y
 CONFIG_SPL_SPI_SUPPORT=y
 CONFIG_SPL_LDSCRIPT="arch/powerpc/cpu/ppc470s/u-boot-spl.lds"
+CONFIG_SPL_BOARD_INIT=y
 CONFIG_BOOTDELAY=10
 CONFIG_SPL=y
 CONFIG_SPI_FLASH=y
@@ -90,3 +91,11 @@ CONFIG_ENV_IS_IN_SPI_FLASH=y
 CONFIG_CMD_MEMTEST=y
 CONFIG_CMD_MEMMAP=y
 CONFIG_BAUDRATE=1000000
+CONFIG_SPL_I2C_SUPPORT=y
+CONFIG_DM_I2C=y
+CONFIG_SYS_I2C_OCORES=y
+CONFIG_MISC=y
+CONFIG_SPL_DRIVERS_MISC_SUPPORT=y
+CONFIG_SPL_I2C_EEPROM=y 
+
+
